# ray-tracer-comp371

./: .clangd  .gitignore  CMakeLists.txt  README.md  README.txt  main.cpp  run.sh
.github/workflows/: cmake-single-platform.yml  create-release-for-assignment.yml
assets/: cornell_box.json  cornell_box.ppm  cornell_box_al.json  cornell_box_al.ppm  cornell_box_demo.json  cornell_box_demo.ppm  cornell_box_empty_pl.json  cornell_box_empty_pl.ppm  test_area_light1.json  test_area_light1.ppm  test_scene1.json  test_scene1.ppm  test_scene1B.json  test_scene1B.ppm  test_scene2.json  test_scene2.ppm  test_scene3.json  test_scene3.ppm  test_scene3B.json  test_scene3B.ppm  test_scene3B_aa.ppm
src/: Geometry.cc  Geometry.h  HitRecord.cc  HitRecord.h  Light.cc  Light.h  Optional.h  Output.cc  Output.h  Parser.cc  Parser.h  Progress.h  Random.h  Ray.cc  Ray.h  RayTracer.cc  RayTracer.h  Scene.cc  Scene.h
student_solution/: cornell_box.ppm  cornell_box_al.ppm  cornell_box_empty_pl.ppm  test_area_light1.ppm  test_scene1.ppm  test_scene1B.ppm  test_scene2.ppm  test_scene3.ppm  test_scene3B.ppm  test_scene3B_aa.ppm
